update 2 simple api test case

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-create-token": "npx mocha tests/integtration-test/create-token.js",
+    "test-create-booking": "npx mocha tests/integtration-test/create-booking.js"
   },
   "keywords": [],
   "author": "Herdian Chandra",
