--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "devDependencies": {
     "chai": "^4.5.0",
+    "dotenv": "^16.5.0",
     "mocha": "^11.2.2",
     "supertest": "^7.1.0"
   }
