--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test-create-token": "npx mocha tests/integtration-test/create-token.js",
     "test-create-booking": "npx mocha tests/integtration-test/create-booking.js",
-    "test-e2e": "npx mocha tests/scenarios/e2e-restful-booker.js"
+    "test-e2e": "npx mocha tests/scenarios/e2e-restful-booker.js",
+    "test-e2e-html": "npx mocha --timeout 5000 --reporter mochawesome tests/scenarios/e2e-restful-booker.js"
   },
   "keywords": [],
   "author": "Herdian Chandra",
@@ -15,6 +16,7 @@
     "chai": "^4.5.0",
     "dotenv": "^16.5.0",
     "mocha": "^11.2.2",
+    "mochawesome": "^7.1.3",
     "supertest": "^7.1.0"
   }
 }
