--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test-create-token": "npx mocha tests/integtration-test/create-token.js",
     "test-create-booking": "npx mocha tests/integtration-test/create-booking.js",
     "test-e2e": "npx mocha tests/scenarios/e2e-restful-booker.js",
-    "test-e2e-html": "npx mocha --timeout 5000 --reporter mochawesome tests/scenarios/e2e-restful-booker.js"
+    "test-e2e-html": "npx mocha --timeout 5000 --reporter mochawesome tests/scenarios/e2e-restful-booker.js",
+    "test-e2e-junit": "npx mocha --timeout 5000 --reporter mocha-junit-reporter tests/scenarios/e2e-restful-booker.js"
   },
   "keywords": [],
   "author": "Herdian Chandra",
@@ -16,6 +17,7 @@
     "chai": "^4.5.0",
     "dotenv": "^16.5.0",
     "mocha": "^11.2.2",
+    "mocha-junit-reporter": "^2.2.1",
     "mochawesome": "^7.1.3",
     "supertest": "^7.1.0"
   }
